[[bin]]
name = 'hogan'
path = 'src/main.rs'
doc = false

[package]
name = 'hogan'
version = '0.12.0'
authors = [
    'Jonathan Morley <jmorley@cvent.com>',
    'Josh Comer <jcomer@cvent.com>',
]
edition = '2018'

[dependencies]
anyhow = '1.0'
thiserror = '1.0'
lru_time_cache = '0.11'
handlebars = '3.5'
itertools = '0.10'
json-patch = '0.2'
log = '0.4'
serde_derive = '1.0'
serde_json = '1.0'
shellexpand = '2.1'
stderrlog = '0.5'
structopt = '0.3'
tempfile = '3'
url = '2'
walkdir = '2'
zip = '0.5'
dogstatsd = '0.6'
actix-web = '3.3'
actix-rt = '2.1'
actix-service = '1.0'
futures = '0.3'
parking_lot = '0.11'
bincode = '1.3'
lazy_static = '1'
riker = '0.4'
riker-patterns = '0.4'
compression = '0.1'
which = '4.0'

[dependencies.tokio]
version = '1.1'
features = ['full']

[dependencies.rusqlite]
version = '0.25'
features = ['bundled']

[dependencies.git2]
version = '0.13'
features = ['vendored-openssl']

[dependencies.regex]
version = '1'
default-features = false

[dependencies.serde]
version = '1.0'
features = ['rc']

[dependencies.uuid]
version = '0.8'
features = ['v4']

[dev-dependencies]
assert_cmd = '1.0'
dir-diff = '0.3'
fs_extra = '1'
predicates = '1.0'
