[[bin]]
name = 'hogan'
path = 'src/main.rs'
doc = false

[package]
name = 'hogan'
version = '0.13.2'
authors = [
    'Jonathan Morley <jmorley@cvent.com>',
    'Josh Comer <jcomer@cvent.com>',
]
edition = '2021'

[dependencies]
actix-web = '4.4'
anyhow = '1.0'
bincode = '1.3'
compression = '0.1'
dogstatsd = '0.6'
futures = '0.3'
handlebars = '3'
itertools = '0.11'
json-patch = '1.1'
lazy_static = '1'
log = '0.4'
lru_time_cache = '0.11'
lru = '0.12'
parking_lot = '0.12'
redis = { version = "0.24.0", features = ["tokio-rustls-comp"] }
riker = '0.4'
riker-patterns = '0.4'
serde_derive = '1.0'
serde_json = '1.0'
shellexpand = '3.1'
stderrlog = '0.5'
structopt = '0.3'
tempfile = '3'
thiserror = '1.0'
url = '2'
walkdir = '2'
which = '5.0'
zip = '0.6'


[dependencies.rusqlite]
version = '0.30'
features = ['bundled']

[dependencies.git2]
version = '0.18'
features = ['vendored-openssl']

[dependencies.regex]
version = '1'
default-features = false

[dependencies.serde]
version = '1.0'
features = ['rc']

[dependencies.uuid]
version = '1.4'
features = ['v4']

[dev-dependencies]
assert_cmd = '2.0'
dir-diff = '0.3'
fs_extra = '1'
predicates = '3.0'
